fix spacing and make view button full width

--- a/css/custom.css
+++ b/css/custom.css
@@ -80,8 +80,12 @@ ul.articles {
 	padding-left: 0;
 }
 
-.row .article-item {
-
+.row.article-item {
+/*	margin-left: 0.1rem;
+	margin-right: 0.1rem;
+	margin-bottom: 1rem;
+	padding-bottom: 1rem;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.125);*/
 }
 
 
